# osirixgrpc

./: .bumpversion.cfg  .gitignore  404.html  CODE_OF_CONDUCT.md  FUNDING.yml  LICENSE  README.md  VERSION  build.sh  build_grpc.sh  build_protobuf.sh  getting_started.html  index.html  objects.inv
.github/ISSUE_TEMPLATE/: bug.yaml  documentation.yaml  feature_request.yaml  generic.yaml  user-test.md
.github/workflows/: build-osirixgrpc.yaml  deploy-docs.yaml  mkdocs.yaml  pypi-publish-dev.yaml  pypi-publish.yaml  update_pyosirix_examples.py
api/: browsercontroller.html  dcmpix.html  dicomimage.html  dicomseries.html  dicomstudy.html  index.html  roi.html  roivolume.html  viewercontroller.html  vrcontroller.html
assets/logo/: create_favicon.py  logo-python.pptx
contributing/: CODE_OF_CONDUCT.html  CONTRIBUTING.html
cpp/: .gitignore  README.md  browsercontroller.pb.cc  browsercontroller.pb.h  dcmpix.pb.cc  dcmpix.pb.h  dicomimage.pb.cc  dicomimage.pb.h  dicomseries.pb.cc  dicomseries.pb.h  dicomstudy.pb.cc  dicomstudy.pb.h  osirix.grpc.pb.cc  osirix.grpc.pb.h  osirix.pb.cc  osirix.pb.h  roi.pb.cc  roi.pb.h  roivolume.pb.cc  roivolume.pb.h  types.pb.cc  types.pb.h  utilities.pb.cc  utilities.pb.h  viewercontroller.pb.cc  viewercontroller.pb.h  vrcontroller.pb.cc  vrcontroller.pb.h
docs/: .gitignore  CONTRIBUTING.md  makedocs.yaml  mkdocs.yaml  requirements.txt
docs/assets/: ~$server_config_list.pptx
docs/docfiles/: README.md  getting_started.md
docs/docs/: README.md  getting_started.md
docs/plantuml/: README.md  grpcosirix_structure.txt
docs/security/: overview.txt
docs/site/: 404.html  getting_started.html  index.html
protos/: browsercontroller.proto  build_protobuf.sh  dcmpix.proto  dicomimage.proto  dicomseries.proto  dicomstudy.proto  osirix.proto  roi.proto  roivolume.proto  types.proto  utilities.proto  viewercontroller.proto  vrcontroller.proto
protos/python/: LICENSE  setup.py
pyosirix/: LICENSE.txt  MANIFEST.in  Makefile  README.md  __init__.py  index.html  pylintrc  pyproject.toml  requirements.txt  setup.py
pyosirix/api/: browser_controller.html  dcm_pix.html  dicom.html  osirix_utilities.html  roi.html  viewer_controller.html  vr_controller.html
pyosirix/contributing/: CONTRIBUTING.html
pyosirix/examples/: gallery.html
pyosirix/examples/ROI Nudge/: index.html
pyosirix/examples/Read ITK/: index.html  script.py
pyosirix/examples/Read ITK/additional files/: screenshot.pptx
pyosirix/examples/Template/: index.html  requirements.txt  script.py
pyosirix/osirix/: __init__.py  base.py  browser_controller.py  dcm_pix.py  dicom.py  exceptions.py  osirix.py  osirix_utilities.py  response_processor.py  roi.py  viewer_controller.py  vr_controller.py
pyosirix/osirix/examples/: example_template.py
python/: README.md  pyproject.toml  requirements.txt  setup.cfg
python/osirixgrpc/: .gitignore  README.md  __init__.py  browsercontroller_pb2.py  dcmpix_pb2.py  dicomimage_pb2.py  dicomseries_pb2.py  dicomstudy_pb2.py  osirix_pb2.py  osirix_pb2_grpc.py  roi_pb2.py  roivolume_pb2.py  types_pb2.py  utilities_pb2.py  viewercontroller_pb2.py  vrcontroller_pb2.py
python/osirixgrpc_2/: osirix_pb2.py
python/pyosirix/: __init__.py  browser_controller.py  build_doc.py  build_src.sh  dcm_pix.py  dicom.py  exceptions.py  osirix_utils.py  response_processor.py  roi.py  test_package.py  viewer_controller.py  vr_controller.py  wait.py
python/pyosirix/examples/: __init__.py
search/: search_index.json
src/: .gitignore  Info.plist  gRPCBrowserControllerDelegate.h  gRPCBrowserControllerDelegate.mm  gRPCCache.h  gRPCCache.mm  gRPCDCMPixDelegate.h  gRPCDCMPixDelegate.mm  gRPCDelegate.h  gRPCDicomImageDelegate.h  gRPCDicomImageDelegate.mm  gRPCDicomSeriesDelegate.h  gRPCDicomSeriesDelegate.mm  gRPCDicomStudyDelegate.h  gRPCDicomStudyDelegate.mm  gRPCErrorCodes.h  gRPCLog.h  gRPCLog.m  gRPCMenuItem.xib  gRPCOsirixDelegate.h  gRPCOsirixDelegate.mm  gRPCOsirixPrefix.pch  gRPCPluginFilter.h  gRPCPluginFilter.mm  gRPCROIDelegate.h  gRPCROIDelegate.mm  gRPCROIVolumeDelegate.h  gRPCROIVolumeDelegate.mm  gRPCScript.m  gRPCScriptManager.h  gRPCScriptManager.m  gRPCScriptWindow.xib  gRPCServer.h  gRPCServer.mm  gRPCServerWindow.xib  gRPCService.h  gRPCServiceAdaptor.h  gRPCTask.m  gRPCToolbarController.h  gRPCToolbarController.m  (+6 more)
src/English.lproj/: InfoPlist.strings
src/gRPCScriptController/: gRPCScriptController.h  gRPCScriptControllerBlockingCellView.h  gRPCScriptControllerBlockingCellView.m  gRPCScriptControllerInterpreterCellView.m  gRPCScriptControllerTypeCellView.m
src/gRPCScriptMVC/: gRPCScript.h  gRPCScriptController.h  gRPCScriptController.m  gRPCScriptControllerBlockingCellView.h  gRPCScriptControllerInterpreterCellView.h  gRPCScriptControllerTypeCellView.h  gRPCScriptWindow.xib
src/gRPCServerController/: gRPCServerController.h  gRPCServerController.m
src/gRPCServerMVC/: gRPCServer.h  gRPCServer.mm  gRPCServerController.h  gRPCServerController.m  gRPCServerControllerActiveCellView.h  (+4 more)
tests/: .gitignore  requirements.txt  run_tests.sh  test_report.html  test_unit.py
(+885 files in other folders)
