[metadata]
name = osirixgrpc
version = attr: osirixgrpc.__version__
author = Matthew D Blackledge
author_email = "matthew.blackledge@icr.ac.uk, mattyblackledge@gmail.com"
description = A GRPC interface to the OsiriX software
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
license_files = 
	file: LICENSE
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X

[options]
packages = osirixgrpc
install_requires = 
	grpcio